--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,10 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
      <!-- Semantic UI -->
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" integrity="sha512-8bHTC73gkZ7rZ7vpqUQThUDhqcNFyYi2xgDgPDHc+GXVGHXq+xPjynxIopALmOPqzo9JZj0k6OqqewdGO3EsrQ==" crossorigin="anonymous" />
-    <title>React App</title>
+     <!-- Google API -->
+     <script src='https://apis.google.com/js/api.js'></script>
+
+    <title>Streamy</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
